My First Change

--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -9,8 +9,8 @@
 </head>
 <body>
   <div>
-      <h1>Welcome to Noah's Super Cool application</h1>
-    {{{body}}}
+      <h1>Welcome to Noah's Super Cool application today</h1>
+    {{{body}}} 
 </div>
 <div>
   <h2>Add an event</h2>
