--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div>
-      <h1>Welcome to Noah's Super Cool application today</h1>
+      <h1>Welcome to Noah's Super Cool application today wednesday</h1>
     {{{body}}} 
 </div>
 <div>
